objects/Enrollment_Import__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Nasco number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <label>Contracts</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Business_Indicator__c</fullName>
        <label>New Business Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processed_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processed Type</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to determine if the record was processed to the Enrollment_Recycle or Enrollment__c objects</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating_State__c</fullName>
        <label>Rating State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rpt_dt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rpt dt</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Dt__c</fullName>
        <description>Date that the import file was created</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Run Dt</label>
        <length>23</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC Product</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <description>This object is the initial entry point for enrollment data.</description>
    <label>Enrollment Import</label>
    <nameField>
        <displayFormat>EI-{00000}</displayFormat>
        <label>Enrollment Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rpt_dt__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Contracts__c</columns>
        <columns>System__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Processed__c</columns>
        <columns>Risk__c</columns>
        <columns>Processed_Type__c</columns>
        <columns>New_Business_Indicator__c</columns>
        <columns>Rating_State__c</columns>
        <columns>Run_Dt__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Ancillary</fullName>
        <columns>NAME</columns>
        <columns>Rpt_dt__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Risk__c</columns>
        <columns>Contracts__c</columns>
        <columns>System__c</columns>
        <columns>Processed__c</columns>
        <columns>Processed_Type__c</columns>
        <columns>New_Business_Indicator__c</columns>
        <columns>Rating_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed_Type__c</field>
            <operation>equals</operation>
            <value>D,R,V</value>
        </filters>
        <label>Ancillary</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Facets</fullName>
        <columns>Processed__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>System__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Contracts__c</columns>
        <columns>Risk__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Run_Dt__c</columns>
        <columns>Rpt_dt__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System__c</field>
            <operation>equals</operation>
            <value>Network Lease</value>
        </filters>
        <label>By System Filter</label>
    </listViews>
    <listViews>
        <fullName>Medical</fullName>
        <columns>NAME</columns>
        <columns>Rpt_dt__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Risk__c</columns>
        <columns>Contracts__c</columns>
        <columns>System__c</columns>
        <columns>Processed__c</columns>
        <columns>Processed_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed_Type__c</field>
            <operation>equals</operation>
            <value>M</value>
        </filters>
        <label>Medical</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_Processed</fullName>
        <columns>NAME</columns>
        <columns>Rpt_dt__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Risk__c</columns>
        <columns>Contracts__c</columns>
        <columns>System__c</columns>
        <columns>Processed__c</columns>
        <columns>Processed_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Not Processed</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processed</fullName>
        <columns>Run_Dt__c</columns>
        <columns>Rpt_dt__c</columns>
        <columns>Processed__c</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>Risk__c</columns>
        <columns>Contracts__c</columns>
        <columns>System__c</columns>
        <columns>Processed_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Processed</label>
    </listViews>
</CustomObject>